# antigravity-qgis-framerepo

./: README.md  bootstrap.py  pyproject.toml
.agent/: AGENTS.md  QUICK_REFERENCE.md  init_agent_system.sh  next_steps.md
.agent/skills/i18n-standards/: SKILL.md
.agent/skills/project-context/: SKILL.md
.agent/skills/qa-qgis-docker/: SKILL.md
.agent/skills/qgis-core/: SKILL.md
.agent/skills/release-management/: SKILL.md
.agent/skills/ui-framework/: SKILL.md
.agent/workflows/: release-plugin.md  run-tests-in-qgis.md
docs/: DEVELOPMENT_LOG.md  GEN5_IMPLEMENTATION_GUIDE.md
scripts/: mcp_server.py  security_scan.py
